@@ -1719,10 +1719,14 @@ div.v-subheader {
  font-size:var(--std-font-size) !important;
 }
 
+.browse-header .v-list__tile__sub-title {
+ color:var(--active-color);
+}
+
 .browse-header {
  background-color:var(--browse-header-color);
 }
- 
+
 .queue-action {
  min-width:44px !important;
 }
