@@ -1041,7 +1041,7 @@ function browseItemAction(view, act, item, index, event) {
                 if (resp.items.length<=0) {
                     return;
                 }
-                var discs = [{title:i18n('All discs')}];
+                var discs = [{title:i18n('All discs'), subtitle:lmsOptions.commentAsDiscTitle ? resp.subtitle : undefined}];
                 for (var i=0, loop=resp.items, len=loop.length; i<len; ++i) {
                     if (loop[i].header) {
                         discs.push(loop[i]);
