@@ -91,7 +91,7 @@ const ARTIST_TAGS = "tags:s";
 const ALBUM_TAGS = "tags:ajlqsyKS";
 const ALBUM_TAGS_ALL_ARTISTS = "tags:aajlqsyKSS";
 const ARTIST_ALBUM_TAGS = "tags:jlqsyKS";
-const TRACK_TAGS = "tags:distuAC";
+const TRACK_TAGS = "tags:dikstuAC";
 const PLAYLIST_TAGS = "tags:suxE";
 const PLAYLIST_TRACK_TAGS = "tags:acdltK";
 const SORT_KEY = "sort:";
